feat(deploy): add direct image copy transport via SCP, update env.yml and README; support --config; add CHANGELOG entry; handle root compose path

--- a/example/env.yml
+++ b/example/env.yml
@@ -1,3 +1,6 @@
+# Image delivery method: "registry" (default) or "copy" to skip registry
+transport: registry
+
 # Server configuration
 # The IP address or domain name of your deployment server
 server: 0.0.0.0
